# nemembory

./: Cargo.toml  RustProjectStructureAgent.Md  agent_response.txt  docker-compose.yml
.github/: copilot-instructions.md
docs/: architecture.excalidraw
examples/: cli.rs  db.rs  stream.rs  ws_client.rs  ws_example.rs  ws_server.rs
init/: init.sql
nemembory-chat/: Cargo.toml
nemembory-chat/src/chat/: chat.rs  mappers.rs
nemembory-core/: Cargo.toml  README.md
nemembory-core/src/: lib.rs
nemembory-core/src/agent/: agent.rs  connections.rs  handlers.rs  hooks.rs  manager.rs  mappers.rs  mod.rs  model.rs
nemembory-core/src/data/: agents.rs  mod.rs
nemembory-core/src/handlers/: filehandler.rs  mod.rs
nemembory-core/src/hooks/: log.rs  mod.rs  save.rs
nemembory-core/src/tools/: get_date.rs  link_to_markdown.rs  mod.rs  shell_tool.rs  web_search.rs
nemembory-server/: Cargo.toml  README.md  testing-request-response.md
nemembory-server/src/: main.rs
src/: lib.rs  main.rs
src/agent/: agent.rs
src/chat/: chat.rs  mod.rs
src/data/: agents.rs  mod.rs
