[package]
name = "nemembory-chat"
version = "0.1.0"
edition = "2024"
resolver = "2"


[dependencies]
rig-core = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
] }
nemembory-core = { path = "D:\\git_repos\\nemembory\\nemembory-core" }
