[package]
name = "nemembory-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nemembory-core = { path = "D:\\git_repos\\nemembory\\nemembory-core" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.46", features = ["derive"] }
anyhow = "1.0.98"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
