[package]
name = "nemembory-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nemembory-core = { path = "D:\\git_repos\\nemembory\\nemembory-core" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.46", features = ["derive"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
